# llm-client

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTH-PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTELLIGENCE-LAYER-COMP.md  INTELLIGENCE_LAYER_IMPLEMENTATION_PLAN_V1.md  README.md  SECURITY.md  TO-COMPLETE.md  docker-compose.llm-client-services.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_intelligence_layer.py
canapply-funding/: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
dana-prototype/: Dockerfile  docker-compose.yml  pyproject.toml
dana-prototype/docs/: ACTION_ITEMS.md  ARCHITECTURE.md  INDEX.md  SYSTEM_AUDIT.md  SYSTEM_AUDIT_PART2.md  USER_SCENARIOS.md  agent_comparison.md  letter_optimization_agent.md  letter_optimization_flow.md  letter_optimization_summary.md  letter_review_agent.md  optimization_context_reference.md
dana-prototype/examples/: cv_generation_example.py  cv_optimization_example.py  cv_review_example.py  email_generation_example.py  email_integration_example.py  email_optimization_example.py  email_review_example.py  letter_optimization_examples.py  letter_review_examples.py
dana-prototype/examples/example_cv/Arousha_Ahmadi___CV___UAlberta___Dr_Walter/: cv.tex  pubs.bib  resume.cls
dana-prototype/prisma/: schema.prisma
dana-prototype/scripts/: init-db.sql
dana-prototype/src/: config.py  main.py
dana-prototype/src/agents/alignment/: alignment_review.py  context.py  criteria.py  engine.py
dana-prototype/src/agents/converter/: engine.py
dana-prototype/src/agents/email/: context.py  email_generation.py  email_review.py  engine.py
dana-prototype/src/agents/letter/: context.py  engine.py  letter_generation.py  letter_review.py
dana-prototype/src/agents/memory/: __init__.py  engine.py
dana-prototype/src/agents/moderation/: __init__.py  engine.py
dana-prototype/src/agents/onboarding/: __init__.py  data.py  gmail.py  template.py
dana-prototype/src/agents/orchestrator/: __init__.py  context.py  engine.py  helpers.py  prompts.py  router.py  tool_wrappers.py  tools.py
dana-prototype/src/agents/programs/: __init__.py  engine.py
dana-prototype/src/agents/resume/: context.py  engine.py  resume_generation.py  resume_review.py  template.py
dana-prototype/src/api/: app.py  dependencies.py
dana-prototype/src/api/middleware/: __init__.py  rate_limit.py
dana-prototype/src/api/routes/: __init__.py  documents.py  enhance.py  health.py  retry.py  threads.py  usage.py
dana-prototype/src/schemas/: __init__.py  common.py  context.py  document.py  thread.py
dana-prototype/src/services/: __init__.py  db.py  events.py  jobs.py  storage.py  usage.py
dana-prototype/src/tools/: async_s3.py  email_diff.py  get_hash.py
docs/: ARCHITECTURE.md  FEEDBACK_IMPLEMENTATION.md  IMPLEMENTATION.md  LAYER2.md  agent-version-control-policy.md  llm-client-adoption-notes-agent-runtime.md  llm-client-adoption-notes-intelligence-layer.md  llm-client-architecture.md  llm-client-build-and-recipes-guide.md  llm-client-changelog-process.md  llm-client-context-and-memory-guide.md  llm-client-evaluation-report-2026-04-01.md  llm-client-examples-guide.md  llm-client-extraction-matrix.md  llm-client-guides-index.md  llm-client-installation-matrix.md  llm-client-migration-from-direct-sdk-guide.md  llm-client-observability-and-redaction-guide.md  llm-client-package-api-guide.md  llm-client-packaging-readiness.md  llm-client-provider-setup-guide.md  llm-client-public-api-v1.md  llm-client-release-automation.md  llm-client-release-notes-1.0.0.md  llm-client-release-notes-1.1.0.md  llm-client-release-notes-1.1.1.md  llm-client-release-notes-1.2.0.md  llm-client-routing-and-failover-guide.md  llm-client-secure-deployment-defaults.md  llm-client-semver-policy.md  llm-client-service-adaptors-design.md  llm-client-structured-outputs-guide.md  llm-client-support-policy.md  llm-client-threat-model.md  llm-client-tool-creation-guide.md  llm-client-tool-runtime-guide.md  llm-client-usage-and-capabilities-guide.md  openai-docs-ledger-completeness-audit-2026-03-31.md  openai-provider-capability-audit.md
examples/: 01_one_shot_completion.py  02_streaming.py  03_embeddings.py  04_content_blocks.py  05_structured_extraction.py  06_provider_registry_and_routing.py  07_engine_cache_retry_idempotency.py  08_tool_execution_modes.py  09_tool_calling_agent.py  10_context_memory_planning.py  11_observability_and_redaction.py  12_benchmarks.py  13_batch_processing.py  14_sync_wrappers.py  15_rate_limiting.py  16_fastapi_sse.py  17_persistence_repository.py  18_memory_backed_assistant.py  19_multi_provider_failover_gateway.py  20_rag_with_citations.py  21_document_review_diff.py  22_human_in_the_loop_approvals.py  23_async_job_queue_sse.py  24_customer_support_copilot.py  25_incident_war_room_assistant.py  26_research_briefing_agent.py  27_sql_analytics_assistant.py  28_release_readiness_control_plane.py  29_multimodal_intake_pipeline.py  30_eval_and_regression_gate.py  31_tool_calling_with_partial_failures.py  32_cache_strategy_showdown.py  33_compliance_redaction_pipeline.py  34_end_to_end_mission_control.py  35_file_block_transport.py  36_sql_adaptor_direct.py  37_sql_adaptor_tools.py  38_openai_background_responses.py  39_openai_conversation_state_workflow.py  40_openai_normalized_output_items.py  (+39 more)
intelligence-layer-constitution/: 2-canonical-primitives.md  3-the-kernels.md  4-ledgers-sources-of-truth.md  7-execution-semantics.md  8-ai-credits-and-budget-enforcement.md  API-RUNTIME-DESIGN.md  DESIGN-AND-IMPLEMENTATION.md  EXECUTION-RFC-V1.md  FEATURE-DEVELOPMENT-WALKTHROUGH.md  HISTORICAL-NOTES.txt  IMPLEMENTATION-PLAYBOOK.md  IMPORTANT.txt  LEDGERS-RFC-V1.md  STATUS.md  WRAPPED.md
llm_client/: README.md  __init__.py  advanced.py  benchmarks.py  budgets.py  cache_keys.py  client.py  compat.py  concurrency.py  config_schema.py  container.py  content.py  context.py  context_assembly.py  context_planning.py  engine.py  errors.py  hashing.py  hooks.py  lifecycle.py  logging.py  memory.py  model_catalog.py  (+20 more)
(+662 files in other folders)
