[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "1.1.0"
description = "Standalone async-first LLM runtime framework with providers, engine, agents, tools, context, cache, observability, and benchmarks."
readme = "llm_client/README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "llm-client maintainers" },
]
maintainers = [
  { name = "llm-client maintainers" },
]
keywords = [
  "llm",
  "ai",
  "agents",
  "tool-calling",
  "structured-output",
  "observability",
  "caching",
  "routing",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.9,<4",
  "asyncpg>=0.31,<1",
  "blake3>=1.0,<2",
  "docstring_parser>=0.17,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.26,<5",
  "numpy>=2.0,<3",
  "openai>=2.21,<3",
  "pydantic>=2.12,<3",
  "python-dotenv>=1.2,<2",
  "PyYAML>=6.0,<7",
  "redis>=7.2,<8",
  "tiktoken>=0.12,<1",
  "tomli>=2.0; python_version < '3.11'",
  "typing_extensions>=4.15,<5",
]

[project.optional-dependencies]
anthropic = [
  "anthropic>=0.79,<1",
]
google = [
  "google-auth>=2.48,<3",
  "google-genai>=1.63,<2",
]
postgres = [
  "asyncpg>=0.31,<1",
]
mysql = [
  "asyncmy>=0.2,<1",
]
redis = [
  "redis>=7.2,<8",
]
qdrant = [
  "qdrant-client>=1.15,<2",
]
adapters = [
  "llm-client[postgres,mysql,redis,qdrant]",
]
telemetry = [
  "opentelemetry-api>=1.39,<2",
  "opentelemetry-sdk>=1.39,<2",
  "opentelemetry-semantic-conventions>=0.60b1,<1",
  "prometheus_client>=0.24,<1",
]
performance = [
  "orjson>=3.11,<4",
  "tqdm>=4.67,<5",
]
server = [
  "fastapi>=0.129,<1",
  "uvicorn>=0.40,<1",
]
dev = [
  "build>=1.2,<2",
  "coverage>=7.13,<8",
  "freezegun>=1.5,<2",
  "gunicorn>=25.1,<26",
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7.0,<8",
  "pytest-mock>=3.15,<4",
  "respx>=0.22,<1",
]
all = [
  "llm-client[anthropic,google,postgres,mysql,redis,qdrant,telemetry,performance,server,dev]",
]

[project.urls]
Documentation = "https://github.com/namiral/intelligence-layer-bif/tree/main/docs"
Repository = "https://github.com/namiral/intelligence-layer-bif"

[tool.setuptools.packages.find]
include = ["llm_client*"]

[tool.setuptools.package-data]
llm_client = ["assets/*.json", "py.typed"]
